tests-integration/fixtures/checking/1779903960_overlapping_instances_polymorphic/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 50
expression: report
---
Terms
Proxy :: forall (k :: Type) (@a :: (k :: Type)). Proxy @(k :: Type) (a :: (k :: Type))
showP ::
  forall (k :: Type) (@a :: (k :: Type)).
    ShowP @(k :: Type) (a :: (k :: Type)) => Proxy @(k :: Type) (a :: (k :: Type)) -> String
value :: String

Types
Proxy :: forall (k :: Type). (k :: Type) -> Type
ShowP :: forall (k :: Type). (k :: Type) -> Constraint

Classes
class forall (k :: Type) (a :: (k :: Type)). ShowP @(k :: Type) (a :: (k :: Type))
  showP ::
  forall (k :: Type) (@a :: (k :: Type)).
    ShowP @(k :: Type) (a :: (k :: Type)) => Proxy @(k :: Type) (a :: (k :: Type)) -> String

Instances
instance forall (t :: Type) (t1 :: (t :: Type)). ShowP @(t :: Type) (t1 :: (t :: Type))
instance forall (t :: Type) (t1 :: (t :: Type)). ShowP @(t :: Type) (t1 :: (t :: Type))

Roles
Proxy = [Phantom]

Diagnostics
error[OverlappingInstances]: Overlapping type class instances found for: ShowP @(t :: Type) (t1 :: (t :: Type))
  --> 13:1..14:21
   |
13 | instance showPSecond :: ShowP a where
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  trivia: forall (t2 :: Type) (t3 :: (t2 :: Type)). ShowP @(t2 :: Type) (t3 :: (t2 :: Type)) is matching
  trivia: forall (t :: Type) (t1 :: (t :: Type)). ShowP @(t :: Type) (t1 :: (t :: Type)) is matching
